2004-07-12  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: convert set_env (which alters ENV) to
	get_env (which just returns what env should be); fix run_script
	accordingly.
	* Engine.pm: dumpinfo: add 'env' pseudo-field.

2004-07-09  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: set_env: simplify handling of NoSetENVVAR and
	SetENVVAR; implement caching of results; factor out path (string
	constant) for Type:java.

2004-07-08  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: system-java
	* PkgVersion.pm: support for Type: java

2004-07-02  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Allow bootstrapping with perl 5.8.2 and perl 5.8.4.
	
2004-07-02  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Remove redundant variable usage. Replace regex-
	match with string-equality to prevent accidental substring matches.

2004-06-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Just a little rearranging to make things easier.

2004-06-29  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Mention which SourceN failed if missing SourceN-MD5.

2004-06-28  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Add checksum argument to fetch_url_to_file; if it
	doesn't match, consider download a failure and continue through
	mirror list.
	* PkgVersion.pm: Pass $checksum to fetch_url_to_file in phase_fetch.
	
2004-06-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Move PatchScript processing into new get_patchscript
	method and enable %default_script (which is blank) in that field.
	* Engine.pm: Use new get_patchscript accessor for dumpinfo.
	
2004-06-26  Daniel Macks  <dmacks@netspace.org>

	* Base.pm: param_boolean now returns undef if field is not present.
	* Engine.pm, PkgVersion.pm: update to use new tristate param_boolean.

2004-06-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Stop ccache from making root-owned files in